# rlvr-experiments

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  NOTES.md  README.md  code_experiments.yaml  code_plots.js  dapo_gsm8k.yaml  docker-compose.yaml  generate_staleness_plots.py  gsm8k_experiments.yaml  gsm8k_plots.js  ifeval_plots.js  index.html  inference.Dockerfile  launch_minerva_samples.sh  launch_parallel_evals.sh  mount_efs.sh  pyproject.toml  pytest.ini  script.py  staleness_plots.js  style.css  trainer.Dockerfile  training.Dockerfile  troubleshooting.md
configs/: actor_config.yaml  config-06B.yaml  config-32B.yaml  config.yaml  docker-compose.yaml  drgrpo-sweep-A.yaml  drgrpo-sweep-B.yaml  drgrpo-sweep-C.yaml  drgrpo-sweep-D.yaml  drgrpo-sweep-E.yaml  drgrpo-sweep-F.yaml  drgrpo-sweep-G.yaml  drgrpo-sweep-H.yaml  drgrpo-sweep-I.yaml  gsm8k-exp1-s0-opt16-lr1e6.yaml  gsm8k-exp2-s1-opt16-lr1e6.yaml  gsm8k-exp4-s1-opt8-lr5e7.yaml  gsm8k-exp5-s1-opt8-lr5e7-sync16.yaml  inference.toml  qwen3-06B-base-mbpp.yaml  qwen3-06B-base.yaml  qwen3-06B-dummy.yaml  qwen3-1.7B-batch128.yaml  qwen3-1.7B-code-apps-grpo-lr1e5-small.yaml  qwen3-1.7B-code-apps-grpo-lr1e5.yaml  qwen3-1.7B-code-grpo-lr1e6.yaml  qwen3-1.7B-code-grpo-lr5e6.yaml  qwen3-1.7B-code-mbpp-grpo-lr1e4.yaml  qwen3-1.7B-code-mbpp-grpo-lr1e5-small.yaml  qwen3-1.7B-code-mbpp-grpo-lr1e5.yaml  qwen3-1.7B-code-mbpp-grpo-lr5e5.yaml  qwen3-1.7B-deepscaler-multinode-test.yaml  qwen3-1.7B-deepscaler-test.yaml  qwen3-1.7B-deepscaler.yaml  qwen3-1.7B-gsm8k-dapo-beta0.yaml  qwen3-1.7B-gsm8k-dapo-beta1e-5.yaml  qwen3-1.7B-gsm8k-dapo-lr1e5.yaml  qwen3-1.7B-gsm8k-dapo-lr1e6.yaml  qwen3-1.7B-gsm8k-dapo-lr5e6-stale2.yaml  qwen3-1.7B-gsm8k-dapo-lr5e6-stale4.yaml  (+96 more)
entrypoints/: eval_benchmarks.py  inference.py  loop.py  sagemaker_combined_launcher.py  sagemaker_eval_launcher.py  (+15 more)
(+416 files in other folders)
