[project]
name = "rlvr-experiments"
requires-python = ">=3.11,<3.12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.3",
    "ray[default]>=2.51.2",
    "torch==2.9.0",
    "torchtitan==0.2.0",
    "vllm==0.11.2",
    "fastapi",
    "uvicorn",
    "tomli-w>=1.2.0",
    "pytest>=9.0.2",
    "math-verify>=0.8.0",
    "seaborn>=0.13.2",
    "pandas>=2.3.3",
    "antlr4-python3-runtime==4.11",
    "lm-eval>=0.4.9.2",
    "boto3>=1.42.31",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyyaml>=6.0.3",
]
